--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
   margin: 3rem 2rem;
   height: 40rem;
   width: 40rem;
+  font-size: 1.6rem;
 }
 
 .note .tools {
@@ -65,8 +66,8 @@ body {
   width: 100%;
   height: 400px;
   resize: none;
-  font-size: 1.6rem;
   padding: 2rem;
+  font-size: inherit;
   font-family: inherit;
 }
 
