--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,7 @@ body {
   // margin: 3rem auto;
   height: 40rem;
   width: 40rem;
-
+  font-size: 1.6rem;
   .tools {
     display: flex;
     justify-content: right;
@@ -70,8 +70,8 @@ body {
     width: 100%;
     height: 400px;
     resize: none;
-    font-size: 1.6rem;
     padding: 2rem;
+    font-size: inherit;
     font-family: inherit;
   }
 }
@@ -79,4 +79,8 @@ body {
 
 .hidden {
   display: none;
+}
+
+.main {
+  
 }
