--- a/style.css
+++ b/style.css
@@ -28,7 +28,15 @@ body {
   background-color: #9ce862;
   color: #fff;
   border-radius: 3px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
   cursor: pointer;
+  transition: all .05s ease-in;
+}
+
+.add:active {
+  color: #444;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  transform: translateY(6px) scale(0.98);
 }
 
 .add i {
@@ -49,6 +57,7 @@ body {
   justify-content: right;
   background-color: #9ec862;
   padding: .5rem;
+  height: 3rem;
 }
 
 .note .tools button {
@@ -60,11 +69,16 @@ body {
   margin-left: .8rem;
 }
 
+.note .tools button:active {
+  transform: translateY(2px) scale(0.98);
+  color: #444;
+}
+
 .note textarea {
   outline: none;
   border: none;
   width: 100%;
-  height: 400px;
+  height: calc(40rem - 3rem);
   resize: none;
   padding: 2rem;
   font-size: inherit;
@@ -73,5 +87,9 @@ body {
 
 .hidden {
   display: none;
+}
+
+.main {
+  padding: 2rem;
 }
 /*# sourceMappingURL=style.css.map */
