--- a/style.scss
+++ b/style.scss
@@ -32,8 +32,14 @@ body {
   background-color: #9ce862;
   color: #fff;
   border-radius: 3px;
+  box-shadow: 0 4px 12px rgba(0,0,0,.6);
   cursor: pointer;
-
+  transition: all .05s ease-in;
+  &:active {
+    color: #444;
+    box-shadow: 0 4px 12px rgba(0,0,0,.3);
+    transform: translateY(6px) scale(.98);
+  }
   i {
     margin-right: .5rem;
   }
@@ -48,11 +54,13 @@ body {
   height: 40rem;
   width: 40rem;
   font-size: 1.6rem;
+
   .tools {
     display: flex;
     justify-content: right;
     background-color: #9ec862;
     padding: .5rem;
+    height: 3rem;
 
     button {
       background-color: transparent;
@@ -61,14 +69,20 @@ body {
       cursor: pointer;
       font-size: 1.6rem;
       margin-left: .8rem;
+
+      &:active {
+        transform: translateY(2px) scale(.98);
+        color: #444;
+      }
     }
+
   }
 
   textarea {
     outline: none;
     border: none;
     width: 100%;
-    height: 400px;
+    height: calc(40rem - 3rem);
     resize: none;
     padding: 2rem;
     font-size: inherit;
@@ -82,5 +96,5 @@ body {
 }
 
 .main {
-  
+  padding: 2rem;
 }
